# timada

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  Makefile  compose.yaml  flake.nix  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  timada.docker.toml  timada.standalone.toml  timada.toml
.docker/ory/: keto.yaml  kratos.yaml  oathkeeper.yaml
.docker/ory/rules/: default.yaml  standalone.yaml
.docker/ory/schemas/: default.json
.docker/traefik/: dynamic.yaml  traefik.yaml
.github/workflows/: publish.yaml
admin/: Cargo.toml
assets/: main.css
assets/lib/: twinspark.min.js
crates/market/: Cargo.toml
crates/market/src/: lib.rs
crates/market/src/migrator/: market_2025_08_16_04_17.rs  mod.rs
crates/market/src/product/: command.rs  mod.rs  query.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
customer/: Cargo.toml
derive/: Cargo.toml
liteventd/: Cargo.toml
liteventd-macro/: Cargo.toml
liteventd/src/: context.rs  cursor.rs  lib.rs  rocksdb.rs  sql.rs
liteventd/tests/: cursor.rs  liteventd.rs  rocksdb.rs  sql.rs
liteventd/tests/account/: command.rs  event.rs  mod.rs
liteventd/tests/liteventd/: mod.rs
liteventd/tests/liteventd/account/: command.rs  event.rs  mod.rs
locales/: fr.json
macros/: Cargo.toml
macros/src/: lib.rs
payment/: Cargo.toml
product/: Cargo.toml
product/locales/: fr.json
product/src/: html_template.rs  lib.rs
product/src/product/: command.rs  mod.rs  query.rs
product/src/routes/: mod.rs
product/templates/: _base.html  index.html
shared/: Cargo.toml
shared/src/: html_template.rs  lib.rs
shared/src/user_lang/: lang.rs  mod.rs  source.rs
shared/src/user_lang/sources/: header.rs  path.rs  query.rs
shop/: Cargo.toml
src/: assets.rs  main.rs
src/axum_extra/: html_template.rs  metadata.rs  mod.rs
src/axum_extra/language/: config.rs  lang.rs  mod.rs
src/axum_extra/language/sources/: header.rs  path.rs  query.rs
src/router/: mod.rs
src/router/market/: mod.rs
src/routes/: mod.rs
templates/: 404.html  _base.html  index.html
templates/market/: index.html
tests/: example.spec.ts
timada/: Cargo.toml
timada/src/: lib.rs
www/: Cargo.toml
