[package]
name = "timada"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
axum = "0.8"
askama = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "8.7"
mime_guess = "2.0"
rust-i18n = "3.1"
tower-livereload = "0.9"
clap = { version =  "4.5", features = ["cargo"] }
config = "0.15"
liteventd = { path = "./liteventd", features = ["handler", "sqlite"] }
shared = { path = "./shared" }
product = { path = "./product" }

[workspace]
members = [ 
  "liteventd",
  "liteventd-macro",
  "product",
  "shared"
]

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
strip = true

