[package]
name = "timada"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "sqlite"] }
# axum = "0.8"
axum = { version = "0.8", features=["macros"] }
askama = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
heed = "0.22"
rust-embed = "8.7"
mime_guess = "2.0"
rust-i18n = "3.1"
tower-livereload = "0.9"
clap = { version =  "4.5", features = ["cargo"] }
config = "0.15"
ulid = { version = "1.2", features = ["serde"] }
tower-layer = "0.3"
evento = { version = "1.0.0-alpha.10", features = ["handler", "sqlite"] }
timada-shared = { path = "./crates/shared" }
timada-market = { path = "./crates/market" }

[workspace]
members = [ 
  "crates/*",
]

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
strip = true

