[package]
name = "liteventd"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ulid = { version = "1.2", features = ["serde"] }
tokio = { version = "1.45", features = ["full"] }
liteventd-macros = { path = "../macros" }
anyhow = "1.0"
ciborium = "0.2"
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
base64 = "0.22"

[dev-dependencies]
validator = { version = "0.20", features = ["derive"] }
