[package]
name = "liteventd"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ulid = { version = "1.2", features = ["serde"] }
tokio = { version = "1.45", features = ["full"] }
liteventd-macros = { path = "../macros" }
anyhow = "1.0"
ciborium = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
base64 = "0.22"
sea-query = "1.0.0-rc.1"
sea-query-binder = { version = "0.8.0-rc.1", features = ["sqlx-sqlite", "runtime-tokio"] }
futures = "0.3"

[dev-dependencies]
validator = { version = "0.20", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "any"] }
rand = "0.9.2"
