[package]
name = "liteventd"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ulid = { version = "1.2", features = ["serde"] }
tokio = { version = "1.45", features = ["full"] }
tokio-stream = { version = "0.1", optional = true }
liteventd-derive = { path = "../derive", optional = true }
anyhow = "1.0"
ciborium = "0.2"
sqlx = { version = "0.8", optional = true }
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"
base64 = "0.22"
sea-query = { version = "1.0.0-rc.1", optional = true }
sea-query-binder = { version = "0.8.0-rc.1", features = ["runtime-tokio"], optional = true }
futures-util = { version = "0.3", optional = true }
backon = { version =  "1.5", optional = true }

[dev-dependencies]
validator = { version = "0.20", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "any"] }
rand = "0.9.2"

[features]
default = ["derive"]
derive = ["liteventd-derive"]
stream = ["futures-util", "tokio-stream"]
handler = ["backon"]
sqlite = ["sea-query", "sea-query-binder/sqlx-sqlite", "sqlx"]
