[package]
name = "product"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
axum = "0.8"
askama = "0.14"
tracing = "0.1"
rust-i18n = "3.1"
shared = { path = "../shared" }
liteventd = { path = "../liteventd", features = ["handler", "sqlite"] }
