[package]
name = "product"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
# axum = { version = "0.8", features=["macros"] }
askama = "0.14"
anyhow = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
validator = { version = "0.20", features = ["derive"] }
tracing = "0.1"
rust-i18n = "3.1"
tower-layer = "0.3"
serde = { version = "1.0", features = ["derive"] }
shared = { path = "../shared" }
liteventd = { path = "../liteventd", features = ["handler", "sqlite"] }
