[package]
name = "timada-market"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0"
publish = true
description = "Manage Product, Category and Variant for timada"
repository = "https://github.com/timayz/timada"
documentation = "https://docs.rs/timada-market"

[dependencies]
anyhow = "1.0"
validator = { version = "0.20", features = ["derive"] }
tracing = "0.1"
heed = "0.22"
serde = { version = "1.0", features = ["derive"] }
timada-shared = { path = "../shared", version = "0.2.0" }
evento = { version = "1.0.0-alpha.10", features = ["handler", "sqlite"] }
