[package]
name = "timada-shared"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0"
publish = true
description = "Common lib for timada"
repository = "https://github.com/timayz/timada"
documentation = "https://docs.rs/timada-shared"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
